--- a/index.htm
+++ b/index.htm
@@ -138,19 +138,28 @@
     width: 100%;
     padding: 0px;
   }
-  .header h1{
-    font-size: 30px;
-  }
-
-.card {   
-    width: 100%;
+  .card {   
+    width: 80%;
     padding: 15px;
     font-size: 14px;
     height: 450px;
-    margin: 10px 10px;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+  .header {
+    padding: 30px;
+    margin-top: 40px;
+    margin-bottom: 40px;
   }
   .footer{
-    margin: 10%
+    margin: 20%
+  }
+
+  .header h1{
+    font-size: 30px;
+  }
+  .header h3{
+    font-size: 15px;
   }
 
 }
