--- a/index.htm
+++ b/index.htm
@@ -115,6 +115,9 @@
     margin-left: 10%;
     margin-right: 10%;
   }
+  .card h2{
+    font-size: 20px;
+  }
   .header {
     padding: 30px;
     margin-top: 40px;
@@ -131,7 +134,7 @@
     font-size: 15px;
   }
 }
-
+/*
 @media screen and (max-width: 450px) {
   .nav a {
     float: none;
@@ -146,6 +149,9 @@
     margin-left: 10%;
     margin-right: 10%;
   }
+  .card h2{
+    font-size: 20px;
+  }
   .header {
     padding: 30px;
     margin-top: 40px;
@@ -163,7 +169,7 @@
   }
 
 }
-
+*/
 
   </style>
 </head>
