--- a/index.htm
+++ b/index.htm
@@ -204,7 +204,7 @@
     	<div class="card" id="Blogs">
     	<h2>Dakshana Foundation</h2>
     	<div>
-       <img src="/images/IMG_20181225_172918.jpg"> 
+       <img src="devusolanki.github.io/images/IMG_20181225_172918.jpg"> 
       </div>
     	<p><strong>Dakshana Foundation</strong> - Infinite good
         <br>I have been a student of DAKSHANA FOUNDATION.
