--- a/index.htm
+++ b/index.htm
@@ -204,7 +204,7 @@
     	<div class="card" id="Blogs">
     	<h2>Dakshana Foundation</h2>
     	<div>
-       <img src="devusolanki.github.io/images/IMG_20181225_172918.jpg"> 
+       <img src="/images/IMG_20181225_172918.jpg"> 
       </div>
     	<p><strong>Dakshana Foundation</strong> - Infinite good
         <br>I have been a student of DAKSHANA FOUNDATION.
@@ -221,7 +221,7 @@
       <div class="card" id="Blogs">
       <h2>JNV.</h2>
       <div>
-       <img src="images/DSC_9304.jpg"> 
+       <img src="/images/DSC_9304.jpg"> 
       </div>
       <p><strong>Navodaya</strong> - A Home away from home.
 <br> Jawahar Navodaya Vidhyalayas(JNV) are residential schools from 5th to 12th all over the country,
@@ -236,7 +236,7 @@ And after that for me at least it is not a schools it is a feeling, a bundle of 
      <div class="card">
       <h2>IIT BOMBAY</h2>
       <div>
-       <img src="images/IMG_20181116_101451.jpg"> 
+       <img src="/images/IMG_20181116_101451.jpg"> 
       </div>
       <p><strong>IIT Bombay</strong>
 <br>No intro is required I guess :\
