--- a/index.htm
+++ b/index.htm
@@ -221,7 +221,7 @@
       <div class="card" id="Blogs">
       <h2>JNV.</h2>
       <div>
-       <img src="/images/DSC_9304.JPG"> 
+       <img src="/images/sea beach.jpg"> 
       </div>
       <p><strong>Navodaya</strong> - A Home away from home.
 <br> Jawahar Navodaya Vidhyalayas(JNV) are residential schools from 5th to 12th all over the country,
