--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <html lang='en'>
 <head>
   <title>Devendra Solanki</title>
-  <link rel = "icon" href="images/circle-cropped.png" type = "image/x-icon">
+  <link rel = "icon" href="/circle-cropped.png" type = "image/x-icon">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <script src="https://kit.fontawesome.com/d6cf0ae6cc.js" crossorigin="anonymous"></script>
@@ -22,7 +22,7 @@
      scroll-behavior: smooth;
   }
     body {
-     background-image: url('images/background2.jpg');
+     background-image: url('/background2.jpg');
      background-repeat: no-repeat;
      background-size: 100% 100%;
      background-attachment: fixed; 
@@ -218,7 +218,7 @@
        <a style="float: right;" href="#about">About</a>
   </div>
 	<div class="header" id="Home">
-      <img src="images/circle-cropped.png" style="width: 15vw;margin-left: 40%;">
+      <img src="/circle-cropped.png" style="width: 15vw;margin-left: 40%;">
 	    <a href="#about" style="text-decoration: none;color: black;"><h1 style="margin-bottom: 0px;"><strong>I'm Devendra Solanki</strong></h1></a>
 	    <h3 style="text-align: center; margin-top: 0px;">Navodayan,Dakshanite,IITian</h3>
   </div>
@@ -228,7 +228,7 @@
     	<div class="card">
       <h2>IIT BOMBAY</h2>
       <div>
-       <img src="images/IMG_20181116_101451.jpg"> 
+       <img src="/IMG_20181116_101451.jpg"> 
       </div>
       <p><strong>IIT Bombay</strong>
 <br>No intro is required I guess :\
@@ -249,7 +249,7 @@ Honestly for me , IIT Bom-bae is just the best and I'm happy here.</p>
     <div class="card">
       <h2>Dakshana Foundation</h2>
       <div>
-       <img src="images/dakshana2.jpg"> 
+       <img src="/dakshana2.jpg"> 
       </div>
       <p><strong>Dakshana Foundation</strong> - Infinite good
         <br>I have been a student of DAKSHANA FOUNDATION.
@@ -265,7 +265,7 @@ Honestly for me , IIT Bom-bae is just the best and I'm happy here.</p>
       <div class="card">
       <h2>JNV.</h2>
       <div>
-       <img src="images/DSC_9304.jpg"> 
+       <img src="/DSC_9304.jpg"> 
       </div>
       <p><strong>Navodaya</strong> - A Home away from home.
 <br> Jawahar Navodaya Vidhyalayas(JNV) are residential schools from 5th to 12th all over the country,
@@ -281,7 +281,7 @@ And after that for me at least it is not a schools it is a feeling, a bundle of 
      <div class="card">
       <h2>Vigyan Manthan Yatra</h2>
       <div>
-       <img src="images/vmy.jpg"> 
+       <img src="/vmy.jpg"> 
       </div>
       <p><strong>Vigyan Manthan yatra - Mission Exellence</strong>
       <br> How it feels when someone tells you that you are going on a 10 days trip to Ahemedabad for free of cost?
