--- a/index.htm
+++ b/index.htm
@@ -43,6 +43,10 @@
     .header h1:hover {
       font-size: 56px;
     }
+	  .header img{
+      width: 15vw;
+      margin-left: 40%;
+    }
   	.nav {
   		background-color: black;
   		overflow: hidden;
@@ -153,7 +157,10 @@
   .header h3{
     font-size: 15px;
   }
-
+.header img{
+      width: 20vw;
+      margin-left: 40%;
+    }
   .me {
       margin-left: 15%;
       margin-right: 15%;
@@ -218,7 +225,7 @@
        <a style="float: right;" href="#about">About</a>
   </div>
 	<div class="header" id="Home">
-      <img src="/circle-cropped.png" style="width: 15vw;margin-left: 40%;">
+      <img src="/circle-cropped.png">
 	    <a href="#about" style="text-decoration: none;color: black;"><h1 style="margin-bottom: 0px;"><strong>I'm Devendra Solanki</strong></h1></a>
 	    <h3 style="text-align: center; margin-top: 0px;">Navodayan,Dakshanite,IITian</h3>
   </div>
