--- a/index.htm
+++ b/index.htm
@@ -272,7 +272,7 @@ Honestly for me , IIT Bom-bae is just the best and I'm happy here.</p>
       <div class="card">
       <h2>JNV.</h2>
       <div>
-       <img src="/DSC_9304.jpg"> 
+       <img src="/sea beach.jpg"> 
       </div>
       <p><strong>Navodaya</strong> - A Home away from home.
 <br> Jawahar Navodaya Vidhyalayas(JNV) are residential schools from 5th to 12th all over the country,
