--- a/index.htm
+++ b/index.htm
@@ -221,7 +221,7 @@
 	<div class="nav sticky">
        <a href="#Home">Home</a>
        <a href="#Blogs">Blogs</a>
-       <a href="resumeforsite.txt" target="_blank">Resume</a>
+       <a href="resume.txt" target="_blank">Resume</a>
        <a style="float: right;" href="#about">About</a>
   </div>
 	<div class="header" id="Home">
