--- a/index.htm
+++ b/index.htm
@@ -14,6 +14,10 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	
+<!--Google Adsense -->
+<script data-ad-client="ca-pub-9699116484186164" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	
   <style>
     * {
   box-sizing: border-box;
